--- a/styles/main.css
+++ b/styles/main.css
@@ -15,6 +15,7 @@
 @import url('components/button.css');
 @import url('components/card.css');
 @import url('components/product-container.css');
+@import url('components/wellness-section.css');
 
 /* Utilities */
 @import url('utilities/utilities.css');
